--- a/frontend/src/css/App.scss
+++ b/frontend/src/css/App.scss
@@ -1,3 +1,6 @@
+//Font
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2:wght@400..800&family=Lilita+One&family=Oxanium:wght@200..800&display=swap');
+
 // variables
 @import "modules/variables";
 
