--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -5,8 +5,35 @@
   box-sizing: border-box;
 }
 
+textarea,
+input {
+  border: none;
+  font-family: "Oxanium", sans-serif;
+}
+
+/* Remove up and down arrows in number input */
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Remove focus highlight */
+input:focus, textarea:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+textarea {
+  resize: none;
+}
+
 body {
   background-color: #191919;
+  font-family: "Oxanium", sans-serif;
+}
+
+button {
   font-family: "Oxanium", sans-serif;
 }
 
@@ -21,6 +48,7 @@ body {
 .header .logo {
   font-family: "Lilita One", sans-serif;
   font-size: 20px;
+  cursor: pointer;
 }
 .header .buttons button {
   border-radius: 30px;
@@ -120,6 +148,7 @@ body {
   height: 280px;
   -o-object-fit: cover;
      object-fit: cover;
+  cursor: pointer;
 }
 
 footer {
@@ -189,6 +218,18 @@ footer .footer-copyright p {
 }
 .single-page .movie-poster .singleMovie-text .movie-rating .rating-stars {
   margin-left: 10px;
+  display: flex;
+  align-items: center;
+}
+.single-page .movie-poster .singleMovie-text .movie-rating .rating-stars svg {
+  color: #fddb09;
+}
+.single-page .movie-poster .singleMovie-text .movie-rating .rating-stars span {
+  margin-left: 5px;
+  height: 17px;
+}
+.single-page .title-style {
+  font-size: 17px;
 }
 .single-page .movie-details {
   padding: 20px 30px 30px;
@@ -204,4 +245,137 @@ footer .footer-copyright p {
 .single-page .movie-details .details .detail-contents {
   width: 100%;
   line-height: 22px;
+}
+.single-page .movie-reviews {
+  padding: 30px 30px 40px;
+  border-bottom: 1px solid #191919;
+}
+.single-page .movie-reviews .review-container {
+  margin-top: 20px;
+}
+.single-page .movie-reviews .review-container .review-box {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.single-page .movie-reviews .review-container .review-box .review-rating {
+  display: flex;
+  align-items: center;
+  margin-left: 20px;
+}
+.single-page .movie-reviews .review-container .review-box .review-rating span {
+  margin-left: 5px;
+}
+.single-page .movie-reviews .review-container .review-box .review-rating svg {
+  color: #fddb09;
+}
+.single-page .movie-reviews .review-container .review-text {
+  line-height: 21px;
+}
+.single-page .write-movie-review {
+  padding: 30px 30px 40px;
+  border-bottom: 1px solid #191919;
+}
+.single-page .write-movie-review .review-input-box {
+  margin-top: 20px;
+}
+.single-page .write-movie-review .review-input-box .input-style {
+  display: flex;
+  align-items: flex-start;
+}
+.single-page .write-movie-review .review-input-box .input-style .label {
+  font-size: 17px;
+  width: 100px;
+}
+.single-page .write-movie-review .review-input-box .input-style textarea,
+.single-page .write-movie-review .review-input-box .input-style input {
+  width: 100%;
+  font-size: 16px;
+}
+.single-page .write-movie-review .review-input-box .input-style textarea {
+  height: 150px;
+}
+.single-page .write-movie-review .review-input-box .input-text {
+  margin-top: 10px;
+}
+.single-page .write-movie-review .review-submit-btn {
+  display: flex;
+  justify-content: flex-end;
+}
+.single-page .write-movie-review .review-submit-btn button {
+  border-radius: 30px;
+  padding: 8px 18px;
+  font-size: 13px;
+  cursor: pointer;
+  border: none;
+  background-color: #191919;
+  color: #ffffff;
+  margin-top: 5px;
+}
+
+.login-signup-style {
+  padding: 30px 30px 70px;
+  color: #ffffff;
+}
+.login-signup-style .image-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-signup-style .image-box img {
+  width: 280px;
+}
+.login-signup-style h4 {
+  font-size: 25px;
+  text-align: center;
+  margin: 40px 0px;
+}
+.login-signup-style .user-input-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.login-signup-style .user-input-box .input-box {
+  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-signup-style .user-input-box .input-box input {
+  height: 45px;
+  width: 90%;
+  border-radius: 30px;
+  border: none;
+  padding-left: 25px;
+}
+.login-signup-style .login-btn-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 15px;
+}
+.login-signup-style .login-btn-box button {
+  height: 43px;
+  width: 90%;
+  border-radius: 30px;
+  border: none;
+  background-color: #EC011C;
+  color: #ffffff;
+}
+.login-signup-style .link-to-otherway {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-size: 14px;
+}
+.login-signup-style .link-to-otherway .otherway-contents {
+  width: 90%;
+  display: flex;
+}
+.login-signup-style .link-to-otherway .otherway-contents span {
+  color: #F55466;
+  margin-left: 10px;
+  cursor: pointer;
 }/*# sourceMappingURL=App.css.map */
