--- a/frontend/src/css/modules/_variables.scss
+++ b/frontend/src/css/modules/_variables.scss
@@ -9,6 +9,7 @@ $black : #191919;
 $white: #ffffff;
 $transparent-white: #ffffff20;
 $red: #EC011C;
+$yellow: #fddb09;
 
 //Font
 $logo-font: "Lilita One", sans-serif;
@@ -27,4 +28,28 @@ $text-font: "Oxanium", sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+
+textarea,
+input {
+    border: none;
+    font-family: $text-font;
+}
+
+/* Remove up and down arrows in number input */
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Remove focus highlight */
+input:focus, textarea:focus {
+    outline: none;
+    box-shadow: none;
+}
+
+textarea {
+    resize: none;
 }
