--- a/frontend/src/css/modules/responsive/_mobile.scss
+++ b/frontend/src/css/modules/responsive/_mobile.scss
@@ -3,6 +3,10 @@ body {
     font-family: $text-font;
 }
 
+button {
+    font-family: $text-font;
+}
+
 //Nav
 .header {
     display: flex;
@@ -15,6 +19,7 @@ body {
     .logo {
         font-family: $logo-font;
         font-size: 20px;
+        cursor: pointer;
     }
 
     .buttons {
@@ -126,6 +131,7 @@ body {
                 width: 200px;
                 height: 280px;
                 object-fit: cover;
+                cursor: pointer;
             }
         }
     }
@@ -193,9 +199,24 @@ footer {
                 align-items: center;
                 .rating-stars {
                     margin-left: 10px;
+                    display: flex;
+                    align-items: center;
+
+                    svg {
+                        color: $yellow;
+                    }
+
+                    span {
+                        margin-left: 5px;
+                        height: 17px;
+                    }
                 }
             }
         }
+    }
+
+    .title-style {
+        font-size: 17px;
     }
 
     .movie-details {
@@ -212,6 +233,151 @@ footer {
                 line-height: 22px;
             }
 
+        }
+    }
+
+    .movie-reviews {
+        padding: 30px 30px 40px;
+        border-bottom: 1px solid $black;
+
+        .review-container {
+            margin-top: 20px;
+
+            .review-box {
+                display: flex;
+                align-items: center;
+                margin-bottom: 10px;
+                .review-rating {
+                    display: flex;
+                    align-items: center;
+                    margin-left: 20px;
+
+                    span {
+                        margin-left: 5px;
+                    }
+
+                    svg {
+                        color: $yellow;
+                    }
+                }
+            } 
+            
+            .review-text {
+                line-height: 21px;
+            }   
+        }        
+    }
+
+    .write-movie-review {
+        padding: 30px 30px 40px;
+        border-bottom: 1px solid $black;
+
+        .review-input-box {
+            margin-top: 20px;
+
+            .input-style {
+                display: flex;
+                align-items: flex-start;
+                .label {
+                    font-size: 17px;
+                    width: 100px;
+                }
+                textarea,
+                input {
+                    width: 100%;
+                    font-size: 16px;
+                }
+
+                textarea {
+                    height: 150px;
+                }
+            }
+
+            .input-text {
+                margin-top: 10px;
+            }
+        }
+        .review-submit-btn{
+            display: flex;
+            justify-content: flex-end;
+
+            button {
+                @include mobile-button;
+                border: none;
+                background-color: $black;
+                color: $white;
+                margin-top: 5px;
+            }
+        }
+
+    }
+}
+
+//Login, Sign up page
+.login-signup-style {
+    padding: 30px 30px 70px;
+    color: $white;
+
+    .image-box {
+        @include flex-center;
+
+        img {
+            width: 280px;
+        }
+    }
+
+    h4 {
+        font-size: 25px;
+        text-align: center;
+        margin: 40px 0px;
+    }
+
+    .user-input-box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+
+        .input-box {
+            margin-bottom: 15px;
+            @include flex-center;
+
+            input {
+                height: 45px;
+                width: 90%;
+                border-radius: 30px;
+                border: none;
+                padding-left: 25px;
+            } 
+        }
+    }
+
+    .login-btn-box {
+        @include flex-center;
+        margin-bottom: 15px;
+
+        button {
+            height: 43px;
+            width: 90%;
+            border-radius: 30px;
+            border: none;
+            background-color: $red;
+            color: $white;
+        }
+    }
+
+    .link-to-otherway {
+        @include flex-center;
+        width: 100%;
+        font-size: 14px;
+        .otherway-contents {
+            width: 90%;
+            display: flex;
+            span {
+                color: #F55466;
+                margin-left: 10px;
+                cursor: pointer;
+            }
         }
     }
 }
