--- a/frontend/src/css/modules/responsive/_mobile.scss
+++ b/frontend/src/css/modules/responsive/_mobile.scss
@@ -391,6 +391,7 @@ footer {
             border: none;
             background-color: $red;
             color: $white;
+            cursor: pointer;
         }
     }
 
