--- a/frontend/src/css/modules/responsive/_desktop.scss
+++ b/frontend/src/css/modules/responsive/_desktop.scss
@@ -1,3 +1,367 @@
 @media screen and (min-width: 992px) {
+   
+    //Nav
+    header {
+        padding: 30px 50px;
     
+        .logo {
+            font-family: $logo-font;
+            font-size: 20px;
+            cursor: pointer;
+        }
+    
+        .buttons {
+            .logo {
+                font-size: 26px;
+            }
+
+            button {
+                @include desktop-button;
+            }
+    
+            .user-info {
+                .username {
+                    margin-right: 15px;
+                    font-size: 18px;
+                    height: 17px;
+                }
+               
+            }
+        }
+    }
+    
+    //Home
+    .page {
+        padding-inline: 50px;
+    
+        .hero-section {
+            display: grid;
+            grid-template-columns: 1fr 1.7fr;
+            align-items: center;
+            gap: 20px;
+
+            .hero-box {
+                display: flex;
+                align-items: center;
+
+                h2 {
+                    top: 30px;
+                    left: 40px;
+                    font-size: 27px;
+                }
+    
+                img {
+                    height: 260px;
+                }
+    
+                button {
+                    bottom: 30px;
+                    right: 30px;
+                    @include desktop-button; 
+                }
+            }
+            .hero1 {
+                margin-bottom: 0px;
+            }
+        }
+    
+        .category-section {
+            .category-wrapper ul{
+                display: flex;
+                justify-content: space-between;
+                margin: 30px 0px;
+    
+                li {
+                    padding: 17px 0px;
+                    font-size: 17px;
+                    width: 100%;
+                    
+                    p {
+                       height: 18px;
+                    }
+    
+                    svg {
+                        width: 20px;
+                        height: 20px;
+                        margin-right: 5px;
+                    }
+                }
+            }
+        }
+    
+        //for mobile swiper
+        .movie-container {
+            overflow: hidden;
+            padding-bottom: 50px;
+        }
+    
+        .movie-section {
+            overflow: hidden;
+            scroll-behavior: smooth;
+            .movie-wrapper {
+                display: flex;
+                align-items: center;
+                overflow-x: auto;
+                scroll-behavior: smooth;
+                gap: 10px;
+    
+                .movie-box img{
+                    width: 220px;
+                    height: 310px;
+                    object-fit: cover;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+    
+    //Footer
+    footer {
+        background-color: $transparent-white;
+        color: white;
+        padding: 20px 30px;
+        .footer-menu {
+            display: none;
+        }
+    
+        .footer-social {
+            @include flex-center;
+            gap: 30px;
+            svg {
+                width: 30px;
+                height: 30px;
+            }
+        }
+    
+        .footer-copyright {
+            @include flex-center;
+            margin-top: 15px;
+            p {
+                font-size: 13px;
+            }
+        }
+    }
+    
+    //Single page
+    .single-page {
+        display: grid;
+        grid-template-columns: 1fr 1.5fr;
+    
+        .movie-poster {
+            display: flex;
+            flex-direction: column;
+            @include flex-center;
+            padding: 0px 0px 70px;
+            border-bottom: none;
+            border-right : 1px solid $black;
+    
+            .singleMovie-image {
+                img {
+                    width: 300px;
+                    max-height: 500px;
+                }
+            }
+    
+            .singleMovie-text {
+                margin-top: 20px;
+                h2 {
+                    font-size: 30px;
+                }
+    
+                .movie-rating {
+                    margin-top: 10px;
+                    p {
+                        font-size: 18px;
+                        height: 20px;
+                    }
+                    .rating-stars {
+                        margin-left: 10px;
+                        display: flex;
+                        align-items: center;
+    
+                        svg {
+                            width: 20px;
+                            height: 20px;
+                        }
+    
+                        span {
+                            margin-left: 10px;
+                            font-size: 18px;
+                            height: 17px;
+                        }
+                    }
+                }
+            }
+        }
+    
+        .title-style {
+            font-size: 20px;
+        }
+    
+        .movie-details {
+            padding: 20px 40px 30px;
+            .details {
+                margin-top: 15px;
+                .detail-title {
+                    width: 200px;
+                }
+                .detail-contents {
+                    font-size: 18px;
+                }
+    
+            }
+        }
+    
+        .movie-reviews {
+            padding: 30px 40px 40px;
+
+            .review-container {
+                margin-top: 23px;
+                font-size: 18px;
+                .review-box {
+                    display: flex;
+                    align-items: center;
+                    margin-bottom: 10px;
+                    .review-rating {
+                        display: flex;
+                        align-items: center;
+                        margin-left: 20px;
+    
+                        span {
+                            margin-left: 5px;
+                        }
+    
+                        svg {
+                            margin-bottom: 3px;
+                            width: 19px;
+                            height: 19px;
+                        }
+                    }
+                } 
+                
+                .review-text {
+                    line-height: 21px;
+                }   
+            }        
+        }
+    
+        .write-movie-review {
+            padding: 30px 40px 40px;
+            border-bottom: 1px solid $black;
+    
+            .review-input-box {
+                margin-top: 20px;
+    
+                .input-style {
+                    display: flex;
+                    align-items: flex-start;
+                    .label {
+                        font-size: 19px;
+                        width: 120px;
+                    }
+                    textarea,
+                    input {
+                        width: 100%;
+                        font-size: 18px;
+                    }
+    
+                    textarea {
+                        height: 150px;
+                    }
+                }
+    
+                .input-text {
+                    margin-top: 15px;
+                }
+            }
+            .review-submit-btn{
+    
+                button {
+                    @include desktop-button;
+                }
+            }
+    
+        }
+    }
+    
+    //Login, Sign up page
+    .login-signup-style {
+        display: flex;
+        width: 100%;
+        padding: 30px 100px 70px;
+        height: 80vh;
+    
+        .image-box {
+            flex: 1;
+            img {
+                width: 380px;
+            }
+        }
+
+        .input-container {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+    
+        h4 {
+            font-size: 30px;
+            text-align: center;
+            margin: 0px 0px 60px;
+        }
+    
+        .user-input-box {
+            margin-bottom: 15px;
+    
+            .input-box {
+                margin-bottom: 24px;
+                @include flex-center;
+    
+                input {
+                    height: 55px;
+                    font-size: 18px;
+                    padding-left: 30px;
+                } 
+            }
+        }
+    
+        .login-btn-box {
+            margin-bottom: 30px;
+    
+            button {
+                height: 50px;
+                font-size: 16px;
+            }
+        }
+    
+        .link-to-otherway {
+            font-size: 16px;
+            .otherway-contents {
+                span {
+                    margin-left: 12px;
+                }
+            }
+        }
+    
+        .error-message {
+            @include flex-center;
+            width: 100%;
+            margin-top: 15px;
+            font-size: 14px;
+            
+            .error {
+                width: 90%;
+                display: flex;
+                align-items: center;
+                color:#f92c44;
+    
+                svg {
+                    color: $red;
+                    margin-right: 3px;
+                }
+            }
+        }
+        
+    }
 }
