--- a/frontend/src/css/modules/responsive/_mobile.scss
+++ b/frontend/src/css/modules/responsive/_mobile.scss
@@ -63,6 +63,7 @@ header {
 
         .signup-btn {
             background-color: $white;
+            color: $black;
             border: none;
         }
     }
