mobile-login input text size change

--- a/frontend/src/css/modules/responsive/_mobile.scss
+++ b/frontend/src/css/modules/responsive/_mobile.scss
@@ -378,6 +378,7 @@ footer {
                 border-radius: 30px;
                 border: none;
                 padding-left: 25px;
+                font-size: 14px;
             } 
         }
     }
@@ -393,6 +394,7 @@ footer {
             border: none;
             background-color: $red;
             color: $white;
+            font-size: 14px;
             cursor: pointer;
         }
     }
